upd. sdqbeamer.cls

--- a/LaTeX files/sdqbeamer.cls
+++ b/LaTeX files/sdqbeamer.cls
@@ -1277,3 +1277,9 @@
 
 \newcommand{\n}{\leavevmode \\}
 \newcommand{\skipline}{\leavevmode \\~\\}
+
+\newcommand{\mysectionframe}[1]{
+    \begin{frame}{\,}
+      \centering \huge #1
+    \end{frame}
+}
